# lbc library
add_library(lbc_lib)

# lbc sources
target_sources(lbc_lib
    PRIVATE
    Ast/Ast.cpp
    Ast/AstCodePrinter.cpp
    Diag/DiagEngine.cpp
    Driver/Context.cpp
    IR/gen/Gen.cpp
    IR/gen/GenDecl.cpp
    IR/gen/GenExpr.cpp
    IR/gen/GenStmt.cpp
    IR/gen/GenType.cpp
    IR/lib/BasicBlock.cpp
    IR/lib/Function.cpp
    IR/lib/Literal.cpp
    IR/lib/Module.cpp
    IR/lib/NamedValue.cpp
    IR/lib/Temporary.cpp
    IR/lib/Value.cpp
    IR/lib/Variable.cpp
    Lexer/Lexer.cpp
    Lexer/Token.cpp
    Parser/ParseDecl.cpp
    Parser/ParseExpr.cpp
    Parser/ParseStmt.cpp
    Parser/ParseType.cpp
    Parser/Parser.cpp
    Sema/Sema.cpp
    Sema/SemaDecl.cpp
    Sema/SemaExpr.cpp
    Sema/SemaStmt.cpp
    Sema/SemaType.cpp
    Symbol/Symbol.cpp
    Symbol/SymbolTable.cpp
    Type/Aggregate.cpp
    Type/Compound.cpp
    Type/Numeric.cpp
    Type/Type.cpp
    Type/TypeFactory.cpp

    PUBLIC FILE_SET HEADERS FILES
    Ast/AstCodePrinter.hpp
    Diag/DiagEngine.hpp
    Diag/LogProvider.hpp
    Driver/Context.hpp
    IR/gen/IrGenerator.hpp
    IR/lib/BasicBlock.hpp
    IR/lib/Function.hpp
    IR/lib/Literal.hpp
    IR/lib/Module.hpp
    IR/lib/NamedValue.hpp
    IR/lib/Temporary.hpp
    IR/lib/Value.hpp
    IR/lib/ValueTable.hpp
    IR/lib/Variable.hpp
    Lexer/Character.hpp
    Lexer/Cursor.hpp
    Lexer/Lexer.hpp
    Lexer/Token.hpp
    Parser/Parser.hpp
    Sema/SemanticAnalyser.hpp
    Symbol/LiteralValue.hpp
    Symbol/Symbol.hpp
    Symbol/SymbolTable.hpp
    Type/Aggregate.hpp
    Type/Compound.hpp
    Type/Numeric.hpp
    Type/Type.hpp
    Type/TypeFactory.hpp
    Utilities/BaseFlags.hpp
    Utilities/Flags.hpp
    Utilities/Formatters.hpp
    Utilities/Joiner.hpp
    Utilities/NoCopy.hpp
    Utilities/Sequencer.hpp
    Utilities/Try.hpp
    Utilities/ValueRestorer.hpp
    Utilities/Visitor.hpp
)

# Sources generated by tbl-gen tools
add_tblgen(lbc_lib lbc-tblgen
    GENERATOR lbc-ast-def INPUT Ast/Ast.td
    GENERATOR lbc-ast-fwd-decl INPUT Ast/Ast.td OUTPUT AstFwdDecl.hpp
    GENERATOR lbc-ast-visitor INPUT Ast/Ast.td OUTPUT AstVisitor.hpp
    GENERATOR lbc-diag-def INPUT Diag/Diagnostics.td
    GENERATOR lbc-ir-builder INPUT IR/lib/Instructions.td OUTPUT Builder.hpp
    GENERATOR lbc-ir-inst-def INPUT IR/lib/Instructions.td
    GENERATOR lbc-tokens-def INPUT Lexer/TokenKind.td
    GENERATOR lbc-type-base INPUT Type/Types.td OUTPUT TypeBase.hpp
    GENERATOR lbc-type-factory INPUT Type/Types.td OUTPUT TypeFactoryBase.hpp
)

# target settings
target_link_libraries(lbc_lib PRIVATE compiler_options compiler_warnings)
target_include_directories(lbc_lib PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include")

# precompile header
target_precompile_headers(lbc_lib PUBLIC pch.hpp)

# link llvm
configure_llvm(lbc_lib)

# lbc executable
add_executable(lbc main.cpp)
target_link_libraries(lbc PRIVATE lbc_lib compiler_options compiler_warnings)
target_precompile_headers(lbc REUSE_FROM lbc_lib)
set_target_properties(lbc PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
