add_executable(lbc-tblgen
    GeneratorBase.hpp
    ast/AstArg.cpp
    ast/AstArg.hpp
    ast/AstClass.cpp
    ast/AstClass.hpp
    ast/AstFwdDeclGen.cpp
    ast/AstFwdDeclGen.hpp
    ast/AstGen.cpp
    ast/AstGen.hpp
    ast/AstVisitorGen.cpp
    ast/AstVisitorGen.hpp
    diag/DiagGen.cpp
    diag/DiagGen.hpp
    ir/Category.cpp
    ir/IRInstGen.cpp
    ir/IRInstGen.hpp
    tokens/TokensGen.cpp
    tokens/TokensGen.hpp
    type/Type.cpp
    type/Type.hpp
    type/TypeBaseGen.cpp
    type/TypeBaseGen.hpp
    type/TypeFactoryGen.cpp
    type/TypeFactoryGen.hpp
    Builder.hpp
    main.cpp
)
configure_tblgen(lbc-tblgen)
target_include_directories(lbc-tblgen PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_link_libraries(lbc-tblgen PRIVATE compiler_options compiler_warnings)
