add_executable(lbc-tblgen
    ast/AstFwdDeclGen.cpp
    ast/AstFwdDeclGen.hpp
    ast/AstGen.cpp
    ast/AstGen.hpp
    ast/AstVisitorGen.cpp
    ast/AstVisitorGen.hpp
    diag/DiagGen.cpp
    diag/DiagGen.hpp
    ir/IrGen.cpp
    ir/IrGen.hpp
    tokens/TokensGen.cpp
    tokens/TokensGen.hpp
    type/Type.cpp
    type/Type.hpp
    type/TypeBaseGen.cpp
    type/TypeBaseGen.hpp
    type/TypeFactoryGen.cpp
    type/TypeFactoryGen.hpp
    lib/TreeNodeArg.cpp
    lib/TreeNodeArg.hpp
    lib/TreeNode.cpp
    lib/TreeNode.hpp
    lib/TreeGen.hpp
    lib/GeneratorBase.hpp
    lib/Builder.hpp
    main.cpp
)
configure_tblgen(lbc-tblgen)
target_include_directories(lbc-tblgen PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_link_libraries(lbc-tblgen PRIVATE compiler_options compiler_warnings)
