add_executable(lbc-tblgen
    ast/AstFwdDeclGen.cpp
    ast/AstFwdDeclGen.hpp
    ast/AstGen.cpp
    ast/AstGen.hpp
    ast/AstVisitorGen.cpp
    ast/AstVisitorGen.hpp
    diag/DiagGen.cpp
    diag/DiagGen.hpp
    ir/IrBuilderGen.cpp
    ir/IrBuilderGen.hpp
    ir/IrGen.cpp
    ir/IrGen.hpp
    lib/Builder.hpp
    lib/GeneratorBase.hpp
    lib/TreeGen.cpp
    lib/TreeGen.hpp
    lib/TreeNode.cpp
    lib/TreeNode.hpp
    lib/TreeNodeArg.cpp
    lib/TreeNodeArg.hpp
    tokens/TokensGen.cpp
    tokens/TokensGen.hpp
    type/Type.cpp
    type/Type.hpp
    type/TypeBaseGen.cpp
    type/TypeBaseGen.hpp
    type/TypeFactoryGen.cpp
    type/TypeFactoryGen.hpp
    main.cpp
)
configure_tblgen(lbc-tblgen)
target_include_directories(lbc-tblgen PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_link_libraries(lbc-tblgen PRIVATE compiler_options compiler_warnings)
